fixed vertical alignment of some more icons

--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -99,10 +99,6 @@
           display: flex;
           margin-left: auto;
 
-          button {
-            padding: 0.33em;
-          }
-
           .icon-svg path {
             fill: $blue2;
           }
