--- a/src/styles/master.scss
+++ b/src/styles/master.scss
@@ -16,6 +16,10 @@ body {
   margin-left: auto;
 }
 
+.navbar .nav-item {
+  display: flex;
+}
+
 .navbar .nav-link {
   font-size: 16px;
   color: $blue2;
